@@ -7,6 +7,8 @@ Release 1.0 (in development)
 
 * Support for docutils 0.4 has been removed.
 
+* Added ``html-collect-pages`` event.
+
 * Added ``tab-width`` option to ``literalinclude`` directive.
 
 * The ``html_sidebars`` config value can now contain patterns as
